# infotainment

Infotainment/: CMakeLists.txt  main.cpp
Infotainment/Controllers/: audiocontroller.cpp  audiocontroller.h  hyachandler.cpp  hyachandler.h  system.cpp  system.h
Infotainment/ui/BottomBar/: BottomBar.qml  HVACComponent.qml
Infotainment/ui/LeftScreen/: LeftScreen.qml
